--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Ensure full height for the viewport */
 html,
 body,
 #root {
@@ -7,7 +6,6 @@ body,
   padding: 0;
 }
 
-/* Center the entire App using flexbox */
 .App {
   display: flex;
   flex-direction: column;
@@ -20,7 +18,6 @@ body,
   padding-bottom: 50px;
 }
 
-/* Animated gradient background with neon grid overlay */
 body {
   font-family: "Poppins", sans-serif;
   background: linear-gradient(45deg, #0d0d0d, #1a1a1a, #0d0d0d);
@@ -44,7 +41,6 @@ body {
   }
 }
 
-/* Neon grid overlay */
 body::after {
   content: "";
   position: fixed;
@@ -69,28 +65,24 @@ body::after {
   }
 }
 
-/* Container */
 .container {
   max-width: 600px;
   background: rgba(34, 34, 34, 0.8);
   border-radius: 10px;
   padding: 20px;
-  margin: 0 auto; /* Center the container horizontally */
+  margin: 0 auto;
 }
 
-/* Neon Title */
 .neon-title {
   color: #39ff14;
   text-shadow: 0 0 10px #39ff14, 0 0 20px #39ff14;
 }
 
-/* Neon Label */
 .neon-label {
   color: #39ff14;
   text-shadow: 0 0 5px #39ff14;
 }
 
-/* Neon Select */
 .neon-select {
   background: #111;
   color: #39ff14;
@@ -99,7 +91,6 @@ body::after {
   border-radius: 8px;
 }
 
-/* Neon Buttons */
 .btn-neon {
   background: transparent;
   border: 2px solid #39ff14;
@@ -113,7 +104,6 @@ body::after {
   box-shadow: 0 0 15px #39ff14, 0 0 30px #39ff14;
 }
 
-/* Keyboard Buttons */
 .keyboard-btn {
   background: transparent;
   border: 4px solid #39ff14;
@@ -149,7 +139,6 @@ body::after {
   pointer-events: none;
 }
 
-/* Canvas (Hangman) */
 canvas {
   width: 300px;
   height: 300px;
@@ -161,7 +150,6 @@ canvas {
   box-shadow: 0 0 10px #39ff14;
 }
 
-/* Scoreboard styles */
 #scoreboard {
   position: fixed;
   bottom: 10px;
@@ -174,17 +162,17 @@ canvas {
   color: white;
 }
 .neon-title-large {
-  font-size: 3rem; /* Adjust the size as needed */
+  font-size: 3rem;
 }
 .btn-large {
-  font-size: 1rem; /* Adjust the size as needed */
-  padding: 10px 10px; /* Adjust padding as needed */
+  font-size: 1rem;
+  padding: 10px 10px;
 }
 .keyboard-btn-large {
-  font-size: 1.5rem; /* Adjust the size as needed */
+  font-size: 1.5rem;
 }
 
 .word-display-large {
-  font-size: 1.5rem; /* Adjust the size as needed */
-  letter-spacing: 0.1rem; /* Adjust spacing as needed */
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
 }
